# Template_cpp_python

./: README.md
cpp/: CMakeLists.txt
cpp/cmake/: common.cmake
cpp/src/: CMakeLists.txt
cpp/test/: CMakeLists.txt
python/: demo.py
